--- a/Deal_Memo_Standard/background.html
+++ b/Deal_Memo_Standard/background.html
@@ -55,15 +55,12 @@ footer {
 .page-number {
     color: black;
     position: absolute;
-    bottom: 0.7cm;
+    bottom: 1cm;
     right: 1.0cm;
-    width: 1cm;
+    width: 1.2cm;
+    height: 0.5cm;
     text-align: center;
     font-size: 20px;
-    background-color: white;
-    border: 2px solid rgb(190,30,51);
-    border-radius: 5px;
-    padding: 0.1cm 0.2cm; 
 }
 
         </style>
@@ -71,8 +68,8 @@ footer {
     <body class="{{hasCoverPage}}">
         <header class="header-page-{{pageNumber}}">
             <div class="header-container">
-                <div class="doc-project">{{project}}</div>
-                <div class="doc-date">{{date}}</div>
+                <div class="doc-project">Confidential</div>
+                <!-- <div class="doc-date">{{date}}</div> -->
             </div>            
         </header>
         <footer>
